--- a/MusicEcSite/WebContent/css/EC.css
+++ b/MusicEcSite/WebContent/css/EC.css
@@ -1,18 +1,53 @@
 @charset "UTF-8";
 
 
-
-header{
+.container{
 	width:100%;
-	height:50px;
+	height:65px;
 	background-color:#848ab7;
 	padding:20px 50px;
-
+    z-index:10;
+    top:0;
 	position:fixed;
 
 	display:flex;
 
 }
+
+.top{
+	text-align:center;
+}
+
+.topmenu{
+	text-decoration:none;
+	transition:3s;
+	position:relative;
+	display:inline-block;
+	width:140px;
+	color:#404b73;
+}
+
+.topmenu::after{
+	position:absolute;
+	bottom:0;
+	left:50%;
+	content:'';
+	width:0;
+	height:2px;
+	background-color:#404b73;
+	transition:.3s;
+	transform:translateX(-50%);
+}
+
+.topmenu:hover::after{
+	width:100%;
+}
+
+.topmenu:hover{
+	color:#ff7043;
+}
+
+
 
 body{
 	background-color:#f9ead2;
@@ -48,8 +83,26 @@ h2{
 	line-height:1em;
 	transition:.3s;
 	box-shadow:0 0 8px  #404b73;
+	height:170px;
+	width:140px;
 }
 
+.form-conf{
+	text-align:center;
+}
+
+.form-conf form{
+	display:inline-block;
+	margin:0 10px;
+}
+
+.a-search{
+	border:4px #848ab7;
+	text-align:center;
+	margin:2em 0;
+	padding:2em;
+
+}
 .button:hover{
 	box-shadow:0 0 8px  white;
 	opacity:0.8;
