--- a/MusicEcSite/WebContent/css/EC.css
+++ b/MusicEcSite/WebContent/css/EC.css
@@ -1,6 +1,24 @@
 @charset "UTF-8";
 
 
+.wf-roundedmplus1c { font-family: "M PLUS Rounded 1c"; }
+
+table{
+	text-align:center;
+	color:#404b73;
+}
+
+.tda{
+	text-decoration:none;
+	color:#c47894;
+}
+
+.tda:hover{
+	color:#e69b00;
+}
+
+
+
 .container{
 	width:100%;
 	height:45px;
@@ -12,6 +30,33 @@
 
 	display:flex;
 
+}
+
+.logoutbutton{
+	margin-top:30px;
+	margin:0 auto;
+
+	/*margin: 200px 5px auto;*/
+	display       : inline-block;
+  	border-radius : 20%;          /* 角丸       */
+  	font-size     : 18pt;        /* 文字サイズ */
+  	text-align    : center;      /* 文字位置   */
+  	cursor        : pointer;     /* カーソル   */
+  	padding       : 12px 12px;   /* 余白       */
+  	background    : #99ccff;     /* 背景色     */
+  	color         : #ffffff;     /* 文字色     */
+  	line-height   : 1em;         /* 1行の高さ  */
+  	transition    : .3s;         /* なめらか変化 */
+  	border        : 2px solid #99ccff;    /* 枠の指定 */
+}
+.logoutbutton:hover {
+  color         : #99ccff;     /* 背景色     */
+  background    : #ffffff;     /* 文字色     */
+
+}
+
+.contain-text{
+	text-align:center;
 }
 
 .top{
@@ -52,6 +97,7 @@
 body{
 	background-color:#f9ead2;
 	padding-top:90px;
+	width:100%;
 }
 
 img{
@@ -71,7 +117,8 @@ h2{
 }
 
 .button{
-	display:imline-block;
+	justify-content:center;
+	display:inline-block;
 	border-radius:5px;
 	font-size:19px;
 	font-weight:bold;
@@ -89,6 +136,7 @@ h2{
 
 .form-conf{
 	text-align:center;
+	padding-top:50px;
 }
 
 .form-conf form{
@@ -108,7 +156,10 @@ h2{
 	opacity:0.8;
 }
 
-
+.message{
+	color:#404b73;
+	text-align:center;
+}
 
 /*========= ナビゲーションのためのCSS ===============*/
 
