--- a/MusicEcSite/WebContent/css/EC.css
+++ b/MusicEcSite/WebContent/css/EC.css
@@ -3,6 +3,17 @@
 
 .wf-roundedmplus1c { font-family: "M PLUS Rounded 1c"; }
 
+.insertform{
+	text-align:center;
+}
+
+.purchase{
+	background-color:#404b73;
+	color:white;
+	height:50px;
+	width:150px;
+}
+
 table{
 	text-align:center;
 	color:#404b73;
