--- a/MusicEcSite/WebContent/css/EC.css
+++ b/MusicEcSite/WebContent/css/EC.css
@@ -3,6 +3,10 @@
 
 .wf-roundedmplus1c { font-family: "M PLUS Rounded 1c"; }
 
+.searchpage{
+	text-align:center;
+}
+
 .insertform{
 	text-align:center;
 }
@@ -28,17 +32,15 @@ table{
 	color:#e69b00;
 }
 
-
-
 .container{
 	width:100%;
 	height:45px;
 	background-color:#848ab7;
-	padding:20px 50px;
+	padding:20px ;
     z-index:10;
     top:0;
 	position:fixed;
-
+    
 	display:flex;
 
 }
@@ -46,6 +48,7 @@ table{
 .logoutbutton{
 	margin-top:30px;
 	margin:0 auto;
+	text-align:center;
 
 	/*margin: 200px 5px auto;*/
 	display       : inline-block;
@@ -107,7 +110,7 @@ table{
 
 body{
 	background-color:#f9ead2;
-	padding-top:90px;
+    padding-top:80px;
 	width:100%;
 }
 
