--- a/MusicEcSite/WebContent/css/admin.css
+++ b/MusicEcSite/WebContent/css/admin.css
@@ -76,3 +76,13 @@ h2{
 	color:#404b73;
 	font-size:15px;
 }
+
+header{
+	padding: 6px 0;
+}
+
+.header-inner{
+	max-width:220px;
+	margin:0 auto;
+	width:100%;
+}
